@startuml

skinparam stereotype {
    CBackgroundColor #AF5A50
    ABackgroundColor #7D966E
    IBackgroundColor #D7AA50
}

skinparam class {
	BackgroundColor #E1EAF1
	ArrowColor #00557C
	BorderColor #99BAD0
}

abstract class Solution

class IterativeSolution
class FinalSolution

class StepSolutionData
class TrajectorySolutionData

TrajectorySolutionData *-- StepSolutionData


Solution --|> IterativeSolution
IterativeSolution *-- TrajectorySolutionData

Solution --|> FinalSolution
FinalSolution *-- StepSolutionData

@enduml
